Build app foundation and responsive theme system